--- a/frontend/src/app/header/modules/casinos/components/agregar-casinos/agregar-casinos.component.html
+++ b/frontend/src/app/header/modules/casinos/components/agregar-casinos/agregar-casinos.component.html
@@ -14,6 +14,7 @@
             placeholder="Nombre del casino"
             [(ngModel)]="casinoService.selectCasino.nombre"
             required
+            minlength="45"
           />
         </div>
 
